----------
v6.2.0-git
----------

[mms] Remove the 'default_msg_charset' preference.
[mms] Rewritten folder list code for dynamic view.
[mms] Fix saving expanded state when expanding all mailboxes when all mailboxes
      are already cached in the browser.


-----------
v6.2.0beta2
-----------

[mms] Allow drag/drop to HTML compose body work with text data.
[mms] Cache mailbox exists results in the current access.


-----------
v6.2.0beta1
-----------

[jan] Add Japanese help file (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).
[mms] Add automatic configuration of remote account connection details.
[mms] Support LMTP servers when sending mail.
[mms] Fix regression where creating a mailbox that is currently a container
      would not subscribe to that mailbox.
[mms] Add checks to ensure that saved session expiration message was created by
      the user rather than an outside source.
[mms] Improved handling for multiple expand/collapse actions in the dynamic
      folder list (Bug #13170).
[mms] Provide visual UI info to user that file is uploading when drag/drop
      attachments in dynamic view.


------------
v6.2.0alpha1
------------

[mms] Don't set References header in reply message if equal to In-Reply-To
      header (RFC 5322 [3.6.4]).
[mms] Add configurable IMAP quota checking interval (Request #12907).
[mms] Honor 'from_link' preference in dynamic view.
[mms] Add support for storing image data within HTML signatures.
[mms] Ensure that viewing large mailboxes does not overload the session
      storage size.
[mms] Implement web notifications for new mail alerts.
[mms] Add bare address information to title attribute in viewport on dynamic
      mailbox page
[mms] Display flags on the smartmobile mailbox page (Request #12687).
[mms] Support non-ASCII characters in user-defined flag names (Request #12335).
[mms] Potentially save a call to the contacts backend when viewing HTML
      messages if no image data is present in the message.